# concept-loom

./: .gitignore  LICENSE  README.md  loom.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  writing-adapters.md
examples/: README.md  loom.demo.toml
examples/sample-notes/: homelab.md  reading.md  running.md  sourdough.md
loom/: cli.py  config.py  plugins.py
loom/adapters/: __init__.py  base.py  jsonl_transcripts.py  markdown_folder.py
loom/api/: __init__.py  server.py
loom/llm/: __init__.py  client.py  prompts.py
loom/model/: __init__.py  records.py
loom/pipeline/: cluster.py  embedder.py  namer.py  verifier.py
loom/store/: __init__.py  db.py  schema.sql
scripts/: scheduled_ingest.py
tests/: test_adapters.py  test_events_append_only.py  test_llm_client.py  test_namer.py  test_phase1_imports.py  test_plugins.py  test_provenance.py  test_store_cursor.py  test_verifier.py
tests/fixtures/notes/: garden.md
tests/fixtures/sessions/: sample.jsonl  sample.trajectory.jsonl
ui/static/: index.html  manifest.webmanifest  orbit.html  sw.js
